@@ -1,3 +1,8 @@
+2004-05-06  Larry Ewing  <lewing@ximian.com>
+
+	* gui/dialogs/calendar-setup.c (source_to_dialog): use random
+	color for calendar default.
+
 2004-05-05  JP Rosevear  <jpr@ximian.com>
 
 	Fixes #58025
